default-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: react
  namespace: kube-public
  labels:
    k8s-app: react
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: react
    spec:
      containers:
        - name: react
          image: ccr.ccs.tencentyun.com/docschina/react:main-1706347153913
          resources: 
            limits:
              cpu: 250m
              memory: 500Mi
            requests:
              cpu: 150m
              memory: 200Mi
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeName: vm-16-7-centos
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
