mysql-deployment.yml
apiVersion: v1
kind: Service
metadata: 
  name: mysql-service
  labels:
    app: mysql
spec:
  type: NodePort
  selector: 
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      nodePort: 32419
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name:  mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.3.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-data
      nodeName: vm-12-17-opencloudos
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-8.3
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        args:
          # - --lower_case_table_names=1
          - --character-set-server=utf8mb4
          - --collation-server=utf8mb4_unicode_ci
          - --default-time-zone=+8:00
        image: mysql:8.3.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-data
      nodeName: vm-12-17-opencloudos
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-pvc
